Kubernetes/hands-on/basic-app/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
  labels:
    app: myapp
    tier: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
        - name: myapp
          image: mibrahimpro/myapp:latest
          ports:
            - containerPort: 3000
          readinessProbe:
              httpGet:
                path: /
                port: 3000
              initialDelaySeconds: 3
              periodSeconds: 5
              failureThreshold: 2

          livenessProbe:
              httpGet:
                path: /
                port: 3000
              initialDelaySeconds: 10
              periodSeconds: 10
              failureThreshold: 3
